--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -12,7 +12,7 @@ set(SOURCES
 )
 
 add_library(libprg
-        src/libprg/lista_ordenada.c)
+        src/libprg/lista_linear.c)
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
 
